// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Asciidoc pages > renders correctly - installation slug 1`] = `
<main>
  <section
    class="py-5 px-3"
  >
    <div
      class="asciidoc-container container-adoc row"
      id="asciidoc-container"
    >
      <div
        class="col-lg-3 hide-on-mobile"
      />
      <div
        class="asciidoc col-lg-6 col-md-12"
      >
        <h1
          class="pb-4 fw-light text-center"
        >
          Asciidoc Page title
        </h1>
        <section
          class="adopt-demo-container hide-on-mobile my-5"
        >
          <div
            class="adopt-demo mx-auto"
          >
            <div
              class="install"
            >
              <div
                class="react-tabs"
                data-rttabs="true"
              >
                <div
                  class="install__header"
                >
                  <div
                    class="install__header-circles"
                  >
                    <div
                      class="install__header-grey-circle red"
                    />
                    <div
                      class="install__header-grey-circle yellow"
                    />
                    <div
                      class="install__header-grey-circle green"
                    />
                  </div>
                  <div
                    class="install__header-text"
                  >
                    bash
                  </div>
                </div>
                <ul
                  class="react-tabs__tab-list"
                  role="tablist"
                >
                  <li
                    aria-controls="panel:r0:0"
                    aria-disabled="false"
                    aria-selected="true"
                    class="react-tabs__tab react-tabs__tab--selected"
                    data-rttab="true"
                    id="tab:r0:0"
                    role="tab"
                    tabindex="0"
                  >
                    Windows (Winget)
                  </li>
                  <li
                    aria-controls="panel:r0:1"
                    aria-disabled="false"
                    aria-selected="false"
                    class="react-tabs__tab"
                    data-rttab="true"
                    id="tab:r0:1"
                    role="tab"
                  >
                    macOS (Homebrew)
                  </li>
                  <li
                    aria-controls="panel:r0:2"
                    aria-disabled="false"
                    aria-selected="false"
                    class="react-tabs__tab"
                    data-rttab="true"
                    id="tab:r0:2"
                    role="tab"
                  >
                    Linux (RPM/DEB)
                  </li>
                </ul>
                <div
                  aria-labelledby="tab:r0:0"
                  class="react-tabs__tab-panel react-tabs__tab-panel--selected"
                  id="panel:r0:0"
                  role="tabpanel"
                >
                  <div>
                    <pre
                      class="shell-box no-highlight"
                    >
                      <div
                        class="shell-box-top"
                      />
                      <code
                        class="shell-box-code"
                      >
                        <span
                          class="install__text__no-select"
                        >
                          # Install the latest version
                        </span>
                        <br />
                        <span
                          class="install__text__no-select"
                        >
                          $
                        </span>
                        <span
                          class="install-text-command"
                        >
                          winget install 
                        </span>
                        EclipseAdoptium.Temurin.
                        1
                        .JDK
                      </code>
                    </pre>
                    <br />
                    <pre
                      class="shell-box no-highlight"
                    >
                      <div
                        class="shell-box-top"
                      />
                      <code
                        class="shell-box-code"
                      >
                        <span
                          class="install__text__no-select"
                        >
                          # Install a different version
                        </span>
                        <br />
                        <span
                          class="install__text__no-select"
                        >
                          $
                        </span>
                        <span
                          class="install-text-command"
                        >
                          winget install 
                        </span>
                        EclipseAdoptium.Temurin.11.JDK
                      </code>
                    </pre>
                    <br />
                    <pre
                      class="shell-box no-highlight"
                    >
                      <div
                        class="shell-box-top"
                      />
                      <code
                        class="shell-box-code"
                      >
                        <span
                          class="install__text__no-select"
                        >
                          # Upgrade the Winget package
                        </span>
                        <br />
                        <span
                          class="install__text__no-select"
                        >
                          $
                        </span>
                        <span
                          class="install-text-command"
                        >
                          winget upgrade 
                        </span>
                        EclipseAdoptium.Temurin.
                        1
                        .JDK
                      </code>
                    </pre>
                    <br />
                    <pre
                      class="shell-box no-highlight"
                    >
                      <div
                        class="shell-box-top"
                      />
                      <code
                        class="shell-box-code"
                      >
                        <span
                          class="install__text__no-select"
                        >
                          # Uninstall the Winget package
                        </span>
                        <br />
                        <span
                          class="install__text__no-select"
                        >
                          $
                        </span>
                        <span
                          class="install-text-command"
                        >
                          winget uninstall 
                        </span>
                        EclipseAdoptium.Temurin.
                        1
                        .JDK
                      </code>
                    </pre>
                    <a
                      class="install__docs-button"
                      href="https://docs.microsoft.com/en-us/windows/package-manager/winget/"
                      target="_blank"
                    >
                      Read documentation
                      <i
                        class="fa fa-external-link fa-xs p-1"
                      />
                    </a>
                  </div>
                </div>
                <div
                  aria-labelledby="tab:r0:1"
                  class="react-tabs__tab-panel"
                  id="panel:r0:1"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="tab:r0:2"
                  class="react-tabs__tab-panel"
                  id="panel:r0:2"
                  role="tabpanel"
                />
              </div>
            </div>
          </div>
        </section>
        <div
          class="asciidoc-content"
        >
          
            
          <p>
            Hello World, this is a 
          </p>
          <pre
            class="language-none"
            tabindex="0"
          >
            <code
              class="language-none"
            >
              test
            </code>
          </pre>
          <p />
          
            
          <pre
            class="language-java"
            tabindex="0"
          >
            <code
              class="language-java"
            >
              <span
                class="token keyword"
              >
                public
              </span>
               
              <span
                class="token keyword"
              >
                static
              </span>
               
              <span
                class="token keyword"
              >
                void
              </span>
               
              <span
                class="token function"
              >
                main
              </span>
              <span
                class="token punctuation"
              >
                (
              </span>
              <span
                class="token class-name"
              >
                String
              </span>
              <span
                class="token punctuation"
              >
                [
              </span>
              <span
                class="token punctuation"
              >
                ]
              </span>
               args
              <span
                class="token punctuation"
              >
                )
              </span>
               
              <span
                class="token punctuation"
              >
                {
              </span>
              
                
              <span
                class="token class-name"
              >
                System
              </span>
              <span
                class="token punctuation"
              >
                .
              </span>
              out
              <span
                class="token punctuation"
              >
                .
              </span>
              <span
                class="token function"
              >
                println
              </span>
              <span
                class="token punctuation"
              >
                (
              </span>
              <span
                class="token string"
              >
                "Hello World"
              </span>
              <span
                class="token punctuation"
              >
                )
              </span>
              <span
                class="token punctuation"
              >
                ;
              </span>
              
            
              <span
                class="token punctuation"
              >
                }
              </span>
            </code>
          </pre>
          
            
          <table
            class="table table-hover py-2"
          >
            <thead
              class="table-dark"
            >
              <tr>
                <td>
                  Header 1
                </td>
                <td>
                  Header 2
                </td>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  Cell 1
                </td>
                <td
                  class="icon"
                >
                  Cell 2
                  <i
                    aria-hidden="true"
                    class="fa fa-circle-info fa-xl"
                  />
                </td>
              </tr>
            </tbody>
          </table>
          
            
          <a
            href="https://www.eclipse.org"
            target="_blank"
          >
            Eclipse
            <i
              class="fa fa-external-link fa-xs p-1"
            />
          </a>
          
            
          <i
            class="fab fa-docker"
          />
          
            
          <i
            class="fa fa-check"
          />
          
            
          <details
            class="p-3 my-3 bg-grey"
          >
            <summary
              class="lead"
            >
              asciidoc.table.of.contents
            </summary>
            <ul
              class="sectlevel1"
            >
              
                    
              <li>
                <a
                  href="#section-1"
                >
                  Section 1
                </a>
              </li>
              
                
            </ul>
          </details>
          
        
        </div>
        <hr
          class="m-5"
        />
        <div
          class="_authorList_b2bb3b"
        >
          Text
          <ul>
            <li>
              <a
                aria-label="author1"
                class="_link_09add8 author-icon"
                href="https://github.com/author1"
                rel="noopener noreferrer"
                style="margin-left: 0px;"
                target="_blank"
              >
                <img
                  alt="author1"
                  src="https://github.com/author1.png?size=60"
                />
              </a>
            </li>
            <li>
              <a
                aria-label="author2"
                class="_link_09add8 author-icon"
                href="https://github.com/author2"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=" author2"
                  src="https://github.com/author2.png?size=60"
                />
              </a>
            </li>
          </ul>
        </div>
        <div
          class="mx-auto pt-5"
        >
          <span
            class="fw-bold"
          >
            Text
          </span>
          <br />
          <span>
            Text
          </span>
          <br />
          <a
            class="btn btn-secondary mt-2"
            href="https://github.com/adoptium/adoptium.net/edit/main/content/asciidoc-pages/test.adoc"
            rel="noopener noreferrer"
            style="border-color: rgb(8, 105, 218); background-color: rgb(246, 248, 250);"
            target="_blank"
          >
            <svg
              fill="currentColor"
              height="18"
              stroke="currentColor"
              stroke-width="0"
              style="margin-right: .3em;"
              viewBox="0 0 512 512"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 376.6V206.8c0-46.4-3.7-70.8-22.1-94C374 87.7 348.9 77 310 77h-22V16l-96 96 96 96v-65h22c24.6 0 29 3.6 33.8 9.6 5.5 6.9 8.2 19.1 8.2 54.2v169.8c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4zM384 472c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zM128 48c-35.3 0-64 28.7-64 64 0 23.7 12.9 44.3 32 55.4v209.2c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4V167.4c19.1-11.1 32-31.7 32-55.4 0-35.3-28.7-64-64-64zm0 424c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm0-320c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40z"
              />
            </svg>
            Text
          </a>
        </div>
      </div>
      <div
        class="col-lg-3 hide-on-mobile"
      />
    </div>
  </section>
</main>
`;

exports[`Asciidoc pages > renders correctly 1`] = `
<main>
  <section
    class="py-5 px-3"
  >
    <div
      class="asciidoc-container container-adoc row"
      id="asciidoc-container"
    >
      <div
        class="col-lg-3 hide-on-mobile"
      />
      <div
        class="asciidoc col-lg-6 col-md-12"
      >
        <h1
          class="pb-4 fw-light text-center"
        >
          Asciidoc Page title
        </h1>
        <div
          class="asciidoc-content"
        >
          
            
          <p>
            Hello World, this is a 
          </p>
          <pre
            class="language-none"
            tabindex="0"
          >
            <code
              class="language-none"
            >
              test
            </code>
          </pre>
          <p />
          
            
          <pre
            class="language-java"
            tabindex="0"
          >
            <code
              class="language-java"
            >
              <span
                class="token keyword"
              >
                public
              </span>
               
              <span
                class="token keyword"
              >
                static
              </span>
               
              <span
                class="token keyword"
              >
                void
              </span>
               
              <span
                class="token function"
              >
                main
              </span>
              <span
                class="token punctuation"
              >
                (
              </span>
              <span
                class="token class-name"
              >
                String
              </span>
              <span
                class="token punctuation"
              >
                [
              </span>
              <span
                class="token punctuation"
              >
                ]
              </span>
               args
              <span
                class="token punctuation"
              >
                )
              </span>
               
              <span
                class="token punctuation"
              >
                {
              </span>
              
                
              <span
                class="token class-name"
              >
                System
              </span>
              <span
                class="token punctuation"
              >
                .
              </span>
              out
              <span
                class="token punctuation"
              >
                .
              </span>
              <span
                class="token function"
              >
                println
              </span>
              <span
                class="token punctuation"
              >
                (
              </span>
              <span
                class="token string"
              >
                "Hello World"
              </span>
              <span
                class="token punctuation"
              >
                )
              </span>
              <span
                class="token punctuation"
              >
                ;
              </span>
              
            
              <span
                class="token punctuation"
              >
                }
              </span>
            </code>
          </pre>
          
            
          <table
            class="table table-hover py-2"
          >
            <thead
              class="table-dark"
            >
              <tr>
                <td>
                  Header 1
                </td>
                <td>
                  Header 2
                </td>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  Cell 1
                </td>
                <td
                  class="icon"
                >
                  Cell 2
                  <i
                    aria-hidden="true"
                    class="fa fa-circle-info fa-xl"
                  />
                </td>
              </tr>
            </tbody>
          </table>
          
            
          <a
            href="https://www.eclipse.org"
            target="_blank"
          >
            Eclipse
            <i
              class="fa fa-external-link fa-xs p-1"
            />
          </a>
          
            
          <i
            class="fab fa-docker"
          />
          
            
          <i
            class="fa fa-check"
          />
          
            
          <details
            class="p-3 my-3 bg-grey"
          >
            <summary
              class="lead"
            >
              asciidoc.table.of.contents
            </summary>
            <ul
              class="sectlevel1"
            >
              
                    
              <li>
                <a
                  href="#section-1"
                >
                  Section 1
                </a>
              </li>
              
                
            </ul>
          </details>
          
        
        </div>
        <hr
          class="m-5"
        />
        <div
          class="_authorList_b2bb3b"
        >
          Text
          <ul>
            <li>
              <a
                aria-label="author1"
                class="_link_09add8 author-icon"
                href="https://github.com/author1"
                rel="noopener noreferrer"
                style="margin-left: 0px;"
                target="_blank"
              >
                <img
                  alt="author1"
                  src="https://github.com/author1.png?size=60"
                />
              </a>
            </li>
            <li>
              <a
                aria-label="author2"
                class="_link_09add8 author-icon"
                href="https://github.com/author2"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=" author2"
                  src="https://github.com/author2.png?size=60"
                />
              </a>
            </li>
          </ul>
        </div>
        <div
          class="mx-auto pt-5"
        >
          <span
            class="fw-bold"
          >
            Text
          </span>
          <br />
          <span>
            Text
          </span>
          <br />
          <a
            class="btn btn-secondary mt-2"
            href="https://github.com/adoptium/adoptium.net/edit/main/content/asciidoc-pages/test.adoc"
            rel="noopener noreferrer"
            style="border-color: rgb(8, 105, 218); background-color: rgb(246, 248, 250);"
            target="_blank"
          >
            <svg
              fill="currentColor"
              height="18"
              stroke="currentColor"
              stroke-width="0"
              style="margin-right: .3em;"
              viewBox="0 0 512 512"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 376.6V206.8c0-46.4-3.7-70.8-22.1-94C374 87.7 348.9 77 310 77h-22V16l-96 96 96 96v-65h22c24.6 0 29 3.6 33.8 9.6 5.5 6.9 8.2 19.1 8.2 54.2v169.8c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4zM384 472c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zM128 48c-35.3 0-64 28.7-64 64 0 23.7 12.9 44.3 32 55.4v209.2c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4V167.4c19.1-11.1 32-31.7 32-55.4 0-35.3-28.7-64-64-64zm0 424c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm0-320c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40z"
              />
            </svg>
            Text
          </a>
        </div>
      </div>
      <div
        class="col-lg-3 hide-on-mobile"
      />
    </div>
  </section>
</main>
`;
